# CWeather

./: CMakeLists.txt  readme.md  settings.cfg  settings.txt
include/: colors.h  io.h  queryBuilder.h  settings.h
include/UI/: consoleUI.h
include/parsersJson/: AirQualityJson.h  AstronomyJson.h  ForecastJson.h  WeatherMomentJson.h
include/parsersJsonFromApi/: AirQualityJson.h  AstronomyJson.h  ForecastJson.h  LocationJson.h  WeatherMomentJson.h
include/visitors/: serializeToJsonVisitor.h
include/weather/: AirQuality.h  Astronomy.h  Forecast.h  Location.h  WeatherMoment.h
src/: io.cpp  main.cpp  queryBuilder.cpp  settings.cpp
src/UI/: consoleUI.cpp
src/visitors/: SerializeToJsonVisitor.cpp
src/weather/: AirQuality.cpp  Astronomy.cpp  Forecast.cpp  Location.cpp  WeatherMoment.cpp
